# deepnote-seed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: add_external_projects.cmake  boot_flash.cmake  boot_qspi.cmake  boot_sram.cmake  compiler_linker_options.cmake  post_build_commands.cmake  program_commands.cmake
src/: CMakeLists.txt  main.cpp
tools/: freqtable-builder.py
